<resources>
    <string name="app_name">NyanTalk</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">2133066166764182</string>
    <string name="fb_login_protocol_scheme">fb2133066166764182</string>
    <string name="pref_name" />
    <string name="pref_phone" />
    <string name="pref_email" />
    <string name="pref_password" />
    <string name="pref_pending_phone_verification" />
    <string name="pref_user" />
    <string name="pref_facebook_user" />
    <string name="guide_sign_out">Confirm you want to Sign Out from NyanTalk. You can always Sign In back anytime ):</string>
    <string name="continue_">Continue</string>
    <string name="change_password">Change Password</string>
    <string name="share">Share</string>
    <string name="sign_out">Sign Out</string>
    <string name="quit_nyantalk">Quit NyanTalk</string>
    <string name="copyright">County Government of Nyandarua</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Facebook</string>
    <string name="login_with_phone">Login/Register With Phone</string>
    <string name="about">NyanTalk will help you to raise issues, complains and suggestions to Nyandarua County.
        You can also participate on a discussion forum to discuss county issues with other residents.
    </string>
    <string name="share_text">Hi, Check out NyanTalk, an app for Nyandarua County Government that will help you to raise issues, complains and suggestions to Nyandarua County.
        You can also participate on a discussion forum to discuss county issues with other residents.
        https://play.google.com/store/apps/details?id=ke.go.nyandarua.nyantalk
    </string>
    <string name="home">Home</string>
    <string name="update_profile">Update Profile</string>
    <string name="title_activity_tabbed">TabbedActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Login</string>
    <string name="hint_phone_or_email">Phone or Email Address</string>
    <string name="hint_password">Password</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an Account ? Register Now</string>
    <string name="error_sign_in_id">Enter a valid phone number or email address</string>
    <string name="error_password">Password is required!</string>
    <string name="title_activity_edit_ticket">Issue or Complain</string>
    <string name="hint_response">Type your reply here</string>
    <string name="error_reply">You must type a valid reply!</string>
    <string name="attach_an_optional_image">Attach an optional image</string>
    <string name="hint_subject">Subject of your issue/complain</string>
    <string name="hint_details">Details of your issue/complain</string>
    <string name="select_sub_county">Select Sub County</string>
    <string name="select_ward">Select Ward</string>
    <string name="select_department">Select department</string>
    <string name="submit">Submit</string>
    <string name="error_subject">Subject is required!</string>
    <string name="error_details">Details are required!</string>
    <string name="error_sub_county">You must select sub county!</string>
    <string name="error_ward">You must select ward!</string>
    <string name="error_department">You must select department!</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_phone">Phone Number</string>
    <string name="sign_up">Register</string>
    <string name="error_name">You must enter your full name!</string>
    <string name="error_phone">You must enter a valid phone number!</string>
    <string name="error_confirm_password">You must confirm your password!</string>
    <string name="error_password_match">Your password does not match with the confirmed password!</string>
    <string name="send_again">Send Again</string>
    <string name="not_my_number">Not My Number</string>
    <string name="guide_enter_verification_code">Enter the 4-digit code sent to your mobile number </string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="allow_sms_notifications">Allow SMS notifications</string>
    <string name="tickets_message_empty_data">You have not raised an issue or complain yet \n :( Tap to refresh or check later</string>
    <string name="topics_message_empty_data">There are no topics to show now :(</string>
    <string name="hint_new_password">New Password</string>
    <string name="error_new_password">You must enter a new password!</string>
    <string name="title_activity_recover_password">Recover Password</string>
    <string name="forgot_password">Forgot Password ? Get Help</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="guide_phone_recover_password">Give us your phone number so we can send you a code to help you reset your password</string>
    <string name="password_changed_successfully">Password changed successfully!</string>
    <string name="error_current_password">You must enter your current password!</string>
    <string name="hint_email">Email Address</string>
    <string name="title_activity_about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="visit_our_website">Visit Our Website</string>
    <string name="share_app">Share this App</string>
    <string name="county_website_url">http://www.nyandarua.go.ke</string>
    <string name="county_privacy_policy_url">http://www.nyandarua.go.ke</string>
    <string name="county_terms_of_use_url">http://www.nyandarua.go.ke</string>
    <string name="responses">Responses</string>
    <string name="powered_by">Powered By Flex Communications Limited</string>
    <string name="flex_website_url">http://flexcom.co.ke</string>
    <string name="responses_message_empty_data">Your ticket has not been responded to :( Tap to refresh or check later.</string>
    <string name="contributions_message_empty_data">There are no contributions yet :( Tap to refresh or check later.</string>
    <string name="contributions">Contributions</string>
    <string name="hint_contribution">Type your contribution here</string>
    <string name="error_contribution">You contribution cannot be empty!</string>
    <string name="title_activity_edit_topic">Start a New Topic</string>
    <string name="hint_topic_description">Short description for your topic</string>
    <string name="hint_topic_title">Title for your topic</string>
    <string name="error_topic_title">You must enter a title for your topic!</string>
    <string name="error_topic_description">You must enter a description for your topic!</string>
    <string name="select_forum">Select forum</string>
    <string name="error_forum">You must select a forum!</string>
    <string name="your_ticket_was_completed_please_rate_the_response">Your ticket was completed! Please rate the response</string>
    <string name="guide_rating">If you rate the response as terrible or bad, your ticket will be re opened automatically</string>
    <string name="submit_your_rating">Submit your rating</string>
    <string name="hint_rating_comment">Give an optional brief comment</string>
    <string name="heading_ticket_rated">Ticket completed! Thank you for rating the response</string>
    <string name="login_with_social_media">Login With Social Media</string>
</resources>
