<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                style="@style/BaseCode.Body"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/list_row_padding"
                android:text="@string/select_sub_county"/>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/subCountyMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                app:ms_arrow_tint="@color/colorPrimary"
                app:ms_hint="@string/select_sub_county"/>

            <TextView
                style="@style/BaseCode.Body"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/list_row_padding"
                android:text="@string/select_ward"/>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/wardMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_row_padding"
                app:ms_arrow_tint="@color/colorPrimary"
                app:ms_hint="@string/select_ward"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/nameMET"
                style="@style/METAuthField"
                android:inputType="textPersonName|textCapWords|textNoSuggestions"
                android:layout_marginBottom="@dimen/list_row_padding"
                android:hint="@string/hint_name"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/phoneMET"
                style="@style/METAuthField"
                android:inputType="number"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:maxLength="10"
                android:hint="@string/hint_phone"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/emailMET"
                style="@style/METAuthField"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/hint_email"/>

            <CheckBox
                android:id="@+id/smsNotificationsEnabledCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/allow_sms_notifications"/>

        </LinearLayout>

    </ScrollView>

    <Button
        style="@style/GikoshButton.Flat"
        android:id="@+id/updateBtn"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/update_profile"/>

</FrameLayout>
