<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize">

        <android.support.v7.widget.CardView
            style="@style/BaseCode.CardViewContainer"
            app:contentPadding="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/list_row_padding"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">


                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/signInIdMET"
                    style="@style/METAuthField"
                    android:inputType="textNoSuggestions"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="@string/hint_phone_or_email"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/passwordMET"
                    style="@style/METAuthField"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_password"/>

                <Button
                    android:id="@+id/signInBtn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:text="@string/sign_in"/>

                <Button
                    android:id="@+id/forgotPasswordBtn"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    style="@style/GikoshBorderlessButton"
                    android:textColor="@android:color/holo_red_dark"
                    android:text="@string/forgot_password"/>


                <TextView
                    style="@style/BaseCode.Body"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:text="@string/about"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>

    <Button
        android:id="@+id/signUpBtn"
        style="@style/GikoshButton.Flat"
        android:layout_gravity="bottom"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/don_t_have_an_account_register_now"/>


</FrameLayout>
