<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/list_row_padding">

    <TextView
        android:id="@+id/ratingGuideTitleTV"
        style="@style/BaseCode.Heading"
        android:text="@string/your_ticket_was_completed_please_rate_the_response"
        android:layout_marginBottom="@dimen/list_row_padding"/>

    <com.hsalf.smilerating.SmileRating
        android:id="@+id/smileRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ratingGuideTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide_rating"
        android:padding="@dimen/list_row_padding"
        android:textColor="@color/colorAccent"
        style="@style/TextAppearance.AppCompat.Caption"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:visibility="gone"
        android:id="@+id/commentMET"
        style="@style/METAuthField"
        android:inputType="textNoSuggestions|textImeMultiLine|textMultiLine"
        android:hint="@string/hint_rating_comment"
        android:layout_marginBottom="@dimen/list_row_padding"
        android:gravity="bottom"
        android:minLines="3"
        android:maxLines="7"
        android:maxLength="100"
        app:met_maxCharacters="100"
        app:met_autoValidate="false"/>

    <Button
        android:visibility="gone"
        android:id="@+id/submitRatingBtn"
        style="@style/GikoshButton.Flat"
        android:textAllCaps="true"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/submit_your_rating"/>


</LinearLayout>