<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/phoneInfoTV"
            style="@style/BaseCode.Heading"
            android:text="@string/appbar_scrolling_view_behavior"/>


        <com.jkb.vcedittext.VerificationCodeEditText
            android:id="@+id/codeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_gravity="center"
            app:bottomLineHeight="2dp"
            android:layout_marginBottom="@dimen/list_row_padding"
            app:bottomLineSelectedColor="@color/colorAccent"
            app:selectedBackgroundColor="@color/colorDivider"
            app:bottomLineNormalColor="@color/colorAccent"
            app:figures="4"
            app:verCodeMargin="@dimen/list_row_padding"/>

        <Button
            android:id="@+id/resendBtn"
            style="@style/GikoshButton"
            android:text="@string/send_again"
            android:enabled="false"/>

        <Button
            android:id="@+id/notMyNumberBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:textAllCaps="false"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_my_number"/>


        <EditText
            android:id="@+id/passwordET"
            style="@style/METAuthField"
            android:inputType="textVisiblePassword"
            android:layout_marginTop="@dimen/list_row_padding"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/hint_new_password" />

        <EditText
            android:id="@+id/confirmPasswordET"
            android:inputType="textVisiblePassword"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            style="@style/METAuthField"
            android:hint="@string/hint_confirm_password" />


    </LinearLayout>

</ScrollView>
