<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/resendBtn"
        style="@style/GikoshButton.Flat"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/send_again"
        android:layout_alignParentBottom="true"
        android:enabled="false"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/resendBtn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/infoTV"
                style="@style/BaseCode.Heading"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/appbar_scrolling_view_behavior"/>

            <com.jkb.vcedittext.VerificationCodeEditText
                android:id="@+id/codeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_vertical_margin"
                app:bottomLineHeight="2dp"
                app:bottomLineSelectedColor="@color/colorAccent"
                app:selectedBackgroundColor="@color/colorDivider"
                app:bottomLineNormalColor="@color/colorAccent"
                app:figures="4"
                app:verCodeMargin="@dimen/list_row_padding"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/submitBtn"
                    style="@style/GikoshButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>

                <Button
                    android:id="@+id/notMyNumberBtn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_my_number"
                    android:gravity="center|start"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/submitBtn"
                    android:layout_toLeftOf="@id/submitBtn"
                    android:layout_centerVertical="true"/>



            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
